Finalizado, faltando apenas apresentavel

--- a/exemploWeb01/View/Views/Colaborador/Cadastro.cshtml
+++ b/exemploWeb01/View/Views/Colaborador/Cadastro.cshtml
@@ -7,19 +7,12 @@
 
 <html>
 <head>
-    <style>
-        div{margin: 5px;}
-        a {color: black;
-           background-color: aquamarine;
-          }
-    </style>
     <meta name="viewport" content="width=device-width" />
     <title>Cadastro</title>
 </head>
 <body>
-    @ViewBag.NomeCompleto Seja bem vindo
-    <div>
-        <a href="/colaborador/index">Cadastro</a>
+    <div> 
+        <a href="/colaborador/index">Lista de estoques</a>
     </div>
 </body>
 </html>
