Terminado, faltando desing

--- a/exemploWeb01/View/Views/Estoque/Index.cshtml
+++ b/exemploWeb01/View/Views/Estoque/Index.cshtml
@@ -11,7 +11,7 @@
     <title>Index</title>
     <style>
         div{background-color: cadetblue;
-            width: 321px;
+            width: auto;
         }
     </style>
 </head>
